--- a/src/assets/toolkit/styles/6-components/_components.events.scss
+++ b/src/assets/toolkit/styles/6-components/_components.events.scss
@@ -60,9 +60,7 @@
     color: $grey;
 
     [class^="icon-"] {
-      text-align: center;
       display: inline-block;
-      width: 1.5rem;
 
       &:after {
         top: 0;
